--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,3 +84,25 @@ button:hover {
 .catatan button:hover {
   background-color: #da0dec;
 }
+
+.card {
+  max-width: 400px;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: none;
+}
+
+.card h2 {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.btn-link {
+  color: #007bff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-link:hover {
+  text-decoration: underline;
+}
